[project]
name = "contrails-takehome"
version = "0.1.0"
description = ""
authors = [
    {name = "Danny Krainas",email = "me@danielkrainas.com"}
]
license = {text = "CC0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.15.0"
httpx = "^0.28.1"
pytest = "^8.3.5"

[tool.poetry]
package-mode = false